# Rotera

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  ALGORITHMIC_REVIEW.md  BLENDER.md  CLAUDE.md  DELIGHT_IMPLEMENTATION_GUIDE.md  ENTITY_DRIVEN_OPTIMIZATION.md  EXAMPLES.md  FRONTEND_DATA_ARCHITECTURE_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  INITIALIZATION_ALGORITHMS_PART1.md  INITIALIZATION_SUMMARY.txt  Makefile  OBJECT_REFERENCE_ARCHITECTURE_REVIEW.md  PRECISION-MODE.md  README-TESTING.md  README.md  TESTING-SUCCESS-SUMMARY.md  TESTING_ISSUES_AND_USER_STORIES.md  THINGS-TO-IMPROVE.md  TYPE_USAGE_ANALYSIS.md  TYPE_USAGE_MAP.md  UI_PARADIGM_IMPLEMENTATION_PLAN.md  UX_IMPLEMENTATION_ACTION_PLAN.md  agents.md  all it ui-researcher-tasks.md  architectural-rules.md  architectural-violations-report.md  backend-refactor-tasks.md  beep.bat  build_output.txt  check-no-runtime-ids.ts  check.bat  check.cmd  check.sh  cl.bat  code-review-refactor-plan.md  color-comparison.html  (+31 more)
.claude/: settings.local.json
backend/: README.md  main.py  pyproject.toml
backend/pictorigo/: __init__.py
backend/pictorigo/core/: __init__.py
backend/routers/: __init__.py  projects.py  solve.py  synthetic.py
backend/tests/: test_main.py
backend/tests/core/: __init__.py
backend/tests/fixtures/: project1.json
backend/tests/integration/: __init__.py  test_end_to_end.py  test_geometric_accuracy.py  test_multi_constraints.py  test_optimization_convergence.py
pictorigo/: __init__.py  pyproject.toml
pictorigo/core/: __init__.py
pictorigo/core/export/: __init__.py  converters.py  gltf.py
pictorigo/core/initialization/: __init__.py  incremental.py  pnp.py
pictorigo/core/math/: __init__.py  camera.py  jacobians.py  quaternions.py  robust.py  se3.py
pictorigo/core/models/: __init__.py  constraints.py  entities.py  project.py
(+1144 files in other folders)
